2002-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/harmonic.ly: new file.

	* lily/side-position-interface.cc (aligned_side): don't add
	padding again.

2002-08-18  Werner Lemberg  <wl@gnu.org>

	* ly/engraver-init.ly:
	s/extraverticalExtent/extraVerticalExtent/.
	
2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/score-engraver.cc: Uniformise error message.

	* lily/grob-property.cc (internal_set_grob_property,
	internal_get_grob_property): [!NDEBUG] Remove, use abort instead
	of assert; we always want this functionality.  Uniformise warning
	message.
	
	* lily/main.cc (main, main_prog): Bugfix: move exit-upon-files
	back, until after evaluating init_scheme_code.

	* scm/translator-property-description.scm (breakAlignOrder): Doco fix.

	* Documentation/user/lilypond-book.itely: Remove @cindex
	without argument.

	* Documentation/user/internals.itely: Remove stray comma after
	@cindex entry.

2002-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.5.74 released  

	* lily/break-substitution.cc (fast_fubstitute_grob_list): use
	realloc()

	* lily/dynamic-engraver.cc (process_music): don't use SCM_UNDEFINED

	* Documentation/user/tutorial.itely: fixes by Graham Percival.

2002-08-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lily-guile.cc (type_check_assignment): if
	internal-type-checking set, abort if we find an unknown property.

	* input/regression/GNUmakefile,input/test/GNUmakefile: be anal
	with typechecks

	* lily/beam.cc: add 'knee to interface

	* input/test/*.ly: remove or update files using deprecated
	properties

	* lily/system.cc (spanner_count): new function

	* lily/break-substitution.cc (fast_fubstitute_grob_list): special
	function for break substitutions on groblists in spanners. By
	reordering the elements of the list, we can skip large parts of
	the list in the break substitution. This brings the complexity of
	Lily back to more-or-less linear in the length of the score.
