@@ -12,6 +12,9 @@
 	
 2002-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/parser.yy (assignment, Simple_music): Warning message fix.
+	Junk ARRAY_SIZE definition.
+
 	* lily/score-engraver.cc: Uniformise error message.
 
 	* lily/grob-property.cc (internal_set_grob_property,
